<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_navigation_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_house_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_house" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_fix_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/logo_house_image"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline4"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold" />

    </RelativeLayout>


    <TextView
        android:id="@+id/header_username_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />

    <TextView
        android:id="@+id/header_account_type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_account_type"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2" />
</LinearLayout>