<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/worker_detail_image_view"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/person_2"
        app:layout_constraintBottom_toBottomOf="@+id/worker_rating_detail_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/worker_username_detail_text_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/worker_username_detail_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worker_name"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
        app:layout_constraintBottom_toTopOf="@+id/worker_phone_number_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/worker_detail_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/worker_phone_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worker_contact"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
        app:layout_constraintBottom_toTopOf="@+id/worker_rating_detail_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/worker_username_detail_text_view"
        app:layout_constraintTop_toBottomOf="@+id/worker_username_detail_text_view" />

    <TextView
        android:id="@+id/worker_rating_detail_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_user_star_rate"
        android:gravity="center"
        android:text="@string/worker_rating"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/worker_phone_number_text_view"
        app:layout_constraintTop_toBottomOf="@+id/worker_phone_number_text_view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="204dp" />

    <Button
        android:id="@+id/request_worker_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worker_request_services"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <TextView
        android:id="@+id/worker_location_detail_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/worker_location"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/worker_job_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="332dp"
        android:layout_marginBottom="180dp"
        android:text="@string/worker_job_count"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/worker_location_detail_text_view"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.776" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="488dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>